[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask-RESTful = "^0.3.9"
lxml = "^4.8.0"
pycryptodomex = "^3.14.1"
regex = "^2022.3.15"
requests = "^2.27.1"
yarl = "^1.7.2"
Flask = "^2.1.1"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
